[gd_scene load_steps=13 format=3 uid="uid://d2uru6j46wime"]

[ext_resource type="Script" uid="uid://71567lf5i0rt" path="res://tst_wall.gd" id="1_jq4bc"]
[ext_resource type="PackedScene" uid="uid://bv6kq5suik6fs" path="res://walls/wall_damage_test.glb" id="2_ly0f8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3lt02"]
size = Vector3(0.240845, 2.01068, 1.99084)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_jq4bc"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ly0f8"]
seamless = true
noise = SubResource("FastNoiseLite_jq4bc")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3lt02"]
albedo_color = Color(0, 1, 1, 1)
albedo_texture = SubResource("NoiseTexture2D_ly0f8")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ly0f8"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_3lt02"]
seamless = true
noise = SubResource("FastNoiseLite_ly0f8")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_flv5q"]
albedo_color = Color(1, 0, 1, 1)
albedo_texture = SubResource("NoiseTexture2D_3lt02")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_3lt02"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_flv5q"]
seamless = true
noise = SubResource("FastNoiseLite_3lt02")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eqx7c"]
albedo_texture = SubResource("NoiseTexture2D_flv5q")

[node name="tst_wall" type="Node3D"]
script = ExtResource("1_jq4bc")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.127991, 0.99704, 0.0022583)
shape = SubResource("BoxShape3D_3lt02")

[node name="wall_damage_test" parent="." instance=ExtResource("2_ly0f8")]

[node name="Wall_full" parent="wall_damage_test" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_3lt02")

[node name="wall_half" parent="wall_damage_test" index="1"]
visible = false
surface_material_override/0 = SubResource("StandardMaterial3D_flv5q")

[node name="wall_empty" parent="wall_damage_test" index="2"]
visible = false
surface_material_override/0 = SubResource("StandardMaterial3D_eqx7c")

[editable path="wall_damage_test"]
